# rungchuongvang

./: .gitignore  Class Diagram.asta  RCVdb.db  RCVdb.db-journal  RCVdb.sqbpro  db.mwb  db.mwb.bak  db.txt  db1.sql
RCVproject/: CMakeLists.txt  dialog.ui  main.cpp  mainwindow1.h  resource.qrc
RCVproject/api/: answerapi.cpp  answerapi.h  connection.cpp  connection.h  historyapi.cpp  historyapi.h  questionapi.cpp  questionapi.h  roomapi.cpp  roomapi.h  userapi.cpp  userapi.h
RCVproject/client/: clientmain.cpp  clientmain.h
RCVproject/client/core/: clientcore.cpp  clientcore.h  clientmanager.cpp  clientmanager.h
RCVproject/controller/: answercontroller.cpp  answercontroller.h  createroomcontroller.cpp  createroomcontroller.h  logincontroller.cpp  logincontroller.h  logoutcontroller.cpp  logoutcontroller.h  questioncontroller.cpp  questioncontroller.h  registercontroller.cpp  registercontroller.h  requestjoinroomcontroller.cpp  requestjoinroomcontroller.h  roomcontroller.cpp  roomcontroller.h  startgamecontroller.cpp  startgamecontroller.h  usercontroller.cpp  usercontroller.h
RCVproject/entity/: answer.cpp  answer.h  history.cpp  history.h  question.cpp  question.h  room.cpp  room.h  user.cpp  user.h
RCVproject/message/: clientmessage.cpp  clientmessage.h  finalerrormessage.cpp  finalerrormessage.h  message.cpp  message.h  noinfomessage.cpp  noinfomessage.h  servermessage.cpp  servermessage.h
RCVproject/message/afkgame/: afkgameclientmessage.cpp  afkgameclientmessage.h  afkgameservermessage.cpp  afkgameservermessage.h
RCVproject/message/checkfinish/: checkfinishclientmessage.cpp  checkfinishclientmessage.h  checkfinishservermessage.cpp  checkfinishservermessage.h
RCVproject/message/createroom/: createroomclientmessage.cpp  createroomclientmessage.h  createroomservermessage.cpp  createroomservermessage.h
RCVproject/message/findroom/: findroomclientmessage.cpp  findroomclientmessage.h  findroomservermessage.cpp  findroomservermessage.h
RCVproject/message/login/: loginclientmessage.cpp  loginclientmessage.h  loginservermessage.cpp  loginservermessage.h
RCVproject/message/logout/: logoutclientmessage.cpp  logoutclientmessage.h  logoutservermessage.cpp  logoutservermessage.h
RCVproject/message/register/: registerclientmessage.cpp  registerclientmessage.h  registerservermessage.cpp  registerservermessage.h
RCVproject/message/requestjoinroom/: requestjoinroomclientmessage.cpp  requestjoinroomclientmessage.h  requestjoinroomservermessage.cpp  requestjoinroomservermessage.h  responsejoinroomclientmessage.cpp  responsejoinroomclientmessage.h  responsejoinroomservermessage.cpp  responsejoinroomservermessage.h
RCVproject/message/startgame/: startgameclientmessage.cpp  startgameclientmessage.h  startgameservermessage.cpp  startgameservermessage.h
RCVproject/message/viewhistory/: viewhistoryclientmessage.cpp  viewhistoryclientmessage.h  viewhistoryservermessage.cpp  viewhistoryservermessage.h
RCVproject/message/viewrank/: viewrankclientmessage.cpp  viewrankclientmessage.h  viewrankservermessage.cpp  viewrankservermessage.h
RCVproject/protocol/: attachment.cpp  attachment.h  command.cpp  command.h  requestbody.cpp  requestbody.h  responsebody.cpp  responsebody.h  statuscode.cpp  statuscode.h
RCVproject/scene/: createroomdialog.cpp  createroomdialog.h  gamescene.cpp  gamescene.h  gamescene.ui  historyscene.cpp  historyscene.h  historyscene.ui  homescene.cpp  homescene.h  homescene.ui  listroomscene.cpp  listroomscene.h  listroomscene.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  mydialog.cpp  mydialog.h  mydialog.ui  noeditdelegate.cpp  noeditdelegate.h  rankscene.cpp  rankscene.h  rankscene.ui  register.cpp  register.h  register.ui  registerscene.cpp  registerscene.h  registerscene.ui  resultscene.cpp  resultscene.h  resultscene.ui  roomscene.cpp  roomscene.h  roomscene.ui
RCVproject/server/: servermain.cpp  servermain.h
RCVproject/server/core/: requestprocessing.cpp  requestprocessing.h  servercore.cpp  servercore.h  servercreatemessage.cpp  servercreatemessage.h
RCVproject/server/core/processor/: requestprocessor.cpp  requestprocessor.h
RCVproject/test/: userapitest.cpp  userapitest.h
build-RCVproject-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build-RCVproject-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
build-RCVproject-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/RCVproject_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
build-RCVproject-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/RCVproject_autogen/73AMGEJVFF/: moc_requestjoinroomclientmessage.cpp  moc_requestjoinroomclientmessage.cpp.d  moc_requestjoinroomservermessage.cpp  moc_requestjoinroomservermessage.cpp.d  moc_responsejoinroomclientmessage.cpp  moc_responsejoinroomclientmessage.cpp.d  moc_responsejoinroomservermessage.cpp  moc_responsejoinroomservermessage.cpp.d
build-RCVproject-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/RCVproject_autogen/7EM65HM6UG/: moc_clientmain.cpp  moc_clientmain.cpp.d
build-RCVproject-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/RCVproject_autogen/7HEK2XT3N7/: moc_userapitest.cpp  moc_userapitest.cpp.d
build-RCVproject-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/RCVproject_autogen/EWIEGA46WW/: moc_dialog.cpp  moc_dialog.cpp.d  moc_mainwindow1.cpp  moc_mainwindow1.cpp.d  qrc_resource.cpp
build-RCVproject-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/RCVproject_autogen/HJUDRXRLBF/: moc_loginclientmessage.cpp  moc_loginclientmessage.cpp.d  moc_loginservermessage.cpp  moc_loginservermessage.cpp.d
build-RCVproject-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/RCVproject_autogen/JH45IGJHDZ/: moc_answerapi.cpp  moc_answerapi.cpp.d  moc_connection.cpp  moc_connection.cpp.d  moc_questionapi.cpp  moc_questionapi.cpp.d  moc_roomapi.cpp  moc_roomapi.cpp.d  moc_userapi.cpp  moc_userapi.cpp.d
build-RCVproject-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/RCVproject_autogen/KKF42NIXGB/: moc_requestprocessor.cpp  moc_requestprocessor.cpp.d
build-RCVproject-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/RCVproject_autogen/LHIOWBJX66/: moc_room.cpp  (+3 more)
(+147 files in other folders)
